Finished Bank 84, 85, Started Bank 86

--- a/src/sm.vcxproj
+++ b/src/sm.vcxproj
@@ -238,9 +238,13 @@
     <ClInclude Include="funcs.h" />
     <ClInclude Include="glsl_shader.h" />
     <ClInclude Include="ida_types.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="sm_80.h" />
     <ClInclude Include="sm_81.h" />
     <ClInclude Include="sm_82.h" />
+    <ClInclude Include="sm_84.h" />
+    <ClInclude Include="sm_85.h" />
+    <ClInclude Include="sm_86.h" />
     <ClInclude Include="sm_8b.h" />
     <ClInclude Include="sm_92.h" />
     <ClInclude Include="sm_cpu_infra.h" />
@@ -265,6 +269,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="sm.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
