Finished Bank 86 and Bank 89.

--- a/src/sm.vcxproj
+++ b/src/sm.vcxproj
@@ -246,6 +246,7 @@
     <ClInclude Include="sm_85.h" />
     <ClInclude Include="sm_86.h" />
     <ClInclude Include="sm_88.h" />
+    <ClInclude Include="sm_89.h" />
     <ClInclude Include="sm_8b.h" />
     <ClInclude Include="sm_92.h" />
     <ClInclude Include="sm_cpu_infra.h" />
