Rename the remaining defines and put them into their own header files.

--- a/src/sm.vcxproj
+++ b/src/sm.vcxproj
@@ -248,7 +248,25 @@
     <ClInclude Include="sm_88.h" />
     <ClInclude Include="sm_89.h" />
     <ClInclude Include="sm_8b.h" />
+    <ClInclude Include="sm_90.h" />
+    <ClInclude Include="sm_91.h" />
     <ClInclude Include="sm_92.h" />
+    <ClInclude Include="sm_93.h" />
+    <ClInclude Include="sm_94.h" />
+    <ClInclude Include="sm_9b.h" />
+    <ClInclude Include="sm_a0.h" />
+    <ClInclude Include="sm_a2.h" />
+    <ClInclude Include="sm_a3.h" />
+    <ClInclude Include="sm_a4.h" />
+    <ClInclude Include="sm_a5.h" />
+    <ClInclude Include="sm_a6.h" />
+    <ClInclude Include="sm_a7.h" />
+    <ClInclude Include="sm_a8.h" />
+    <ClInclude Include="sm_a9.h" />
+    <ClInclude Include="sm_aa.h" />
+    <ClInclude Include="sm_b2.h" />
+    <ClInclude Include="sm_b3.h" />
+    <ClInclude Include="sm_b4.h" />
     <ClInclude Include="sm_cpu_infra.h" />
     <ClInclude Include="sm_rtl.h" />
     <ClInclude Include="snes\apu.h" />
