Added preliminary MSU-1 support and fixed various asset bugs.

--- a/sm.ini
+++ b/sm.ini
@@ -52,6 +52,11 @@ AudioChannels = 2
 # Audio buffer size in samples (power of 2; e.g., 4096, 2048, 1024) [try 1024 if sound is crackly]. The higher the more lag before you hear sounds.
 AudioSamples = 512
 
+# Enable MSU support for audio. Files need to be in a subfolder, msu/supermetroid_msu1-*.pcm
+# PCM MSU requires AudioFreq = 44100 to work properly.
+# The following values are accepted: false, true
+EnableMSU = true
+
 [KeyMap]
 # Change what keyboard keys map to the joypad
 # Order: Up, Down, Left, Right, Select, Start, A, B, X, Y, L, R
