Extract various data from bank 80 and removed corresponding RomPtrs.

--- a/sm.ini
+++ b/sm.ini
@@ -55,7 +55,7 @@ AudioSamples = 512
 # Enable MSU support for audio. Files need to be in a subfolder, msu/supermetroid_msu1-*.pcm
 # PCM MSU requires AudioFreq = 44100 to work properly.
 # The following values are accepted: false, true
-EnableMSU = true
+EnableMSU = false
 
 [KeyMap]
 # Change what keyboard keys map to the joypad
