Extracted room metadeta and a lot of other things
-Extracted RoomDefHeader, RoomDefStateSelect, and RoomDefRoomstate from Bank 8F
-Room names enumeration
-Extracted FxDef and DoorDef from Bank 83
-Removed corresponding RomPtr definitions
-Earthquake type macro and enumeration
-SpawnHardcodedPlm calls improvements
-Enumerations for Interrupt Commands, Elevator Door Properties, Ceres Status, Timer Status, Fx Types, Fx Liquid Options, Tile Sets, and PLM Headers
-HUD documentation in Bank 80
-Further Bank 85 documentation (I broke my promise)
-Bank 89 improvements
-Bank 8F improvements
-Various other renamings and improvements

--- a/src/sm.vcxproj.filters
+++ b/src/sm.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="sm_84.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sm_85.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="sm_86.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -179,6 +176,12 @@
     </ClCompile>
     <ClCompile Include="..\third_party\gl_core\gl_core_3_1.c">
       <Filter>Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="sm_83.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sm_85.c">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -351,6 +354,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="sm_87.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sm_8f.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sm_83.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
