--- a/src/sm.vcxproj
+++ b/src/sm.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="sm_80.c" />
     <ClCompile Include="sm_81.c" />
     <ClCompile Include="sm_82.c" />
+    <ClCompile Include="sm_83.c" />
     <ClCompile Include="sm_84.c" />
     <ClCompile Include="sm_85.c" />
     <ClCompile Include="sm_86.c" />
@@ -241,6 +242,7 @@
     <ClInclude Include="sm_80.h" />
     <ClInclude Include="sm_81.h" />
     <ClInclude Include="sm_82.h" />
+    <ClInclude Include="sm_83.h" />
     <ClInclude Include="sm_84.h" />
     <ClInclude Include="sm_85.h" />
     <ClInclude Include="sm_86.h" />
@@ -248,6 +250,7 @@
     <ClInclude Include="sm_88.h" />
     <ClInclude Include="sm_89.h" />
     <ClInclude Include="sm_8b.h" />
+    <ClInclude Include="sm_8f.h" />
     <ClInclude Include="sm_90.h" />
     <ClInclude Include="sm_91.h" />
     <ClInclude Include="sm_92.h" />
