--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 .DS_Store
 *.dSYM
 /.vs/
-/packages/
+/.vscode
+/.cache
 /saves/
-*.o
-/sm
-/build/
+/build*
 /sm.smc
-SDL2.dll
-/sm.exe
-/glsl-shaders/
-/msu/
+CMakeUserPresets.json
+/vcpkg_installed
