Made the rom check allow for both sfc and smc file extensions
Setup support for [Features] section of ini with current features
- AmmoRechargeStation : Missile stations will refill super missiles and power bomb
- ShinesparkControl : Control the shinespark in any direction
- ChainSpark : Resume speed boosting from slope
- LowHealthBeep : Lower volume of low health beep
- PowerBombReveal : Power bombs reveal super missile blocks
- InstantPickups : Quick pickups

Based on code implementation LowHealthBeep could be changed from a bool to a value and used to set how much to lower the volume by.

--- a/sm.ini
+++ b/sm.ini
@@ -57,6 +57,25 @@ AudioSamples = 512
 # The following values are accepted: false, true
 EnableMSU = false
 
+[Features]
+# Missile stations will refill super missiles and power bombs
+AmmoRechargeStation = 0
+
+# Control the shinespark in any direction
+ShinesparkControl = 0
+
+# Resume speed boosting from slope
+ChainSpark = 0
+
+# Lower volume of low health beep
+LowHealthBeep = 0
+
+# Power bombs reveal super missile blocks
+PowerBombReveal = 0
+
+# Quick pickups
+InstantPickups = 0
+
 [KeyMap]
 # Change what keyboard keys map to the joypad
 # Order: Up, Down, Left, Right, Select, Start, A, B, X, Y, L, R
