Changed LowHealthBeep to be a Percentage of the set value in the ini and fixed the features address to one that has room for a uint32

--- a/sm.ini
+++ b/sm.ini
@@ -67,8 +67,8 @@ ShinesparkControl = 0
 # Resume speed boosting from slope
 ChainSpark = 0
 
-# Lower volume of low health beep
-LowHealthBeep = 0
+# Volume percentage of the low health beep (0-100)
+LowHealthBeep = 100
 
 # Power bombs reveal super missile blocks
 PowerBombReveal = 0
