Fixed assumption of 240 extended y usage and restored the ExtendedY ini setting for when someone does get around to fixing extended y

--- a/sm.ini
+++ b/sm.ini
@@ -16,6 +16,11 @@ Fullscreen = 0
 # Window scale (1=100%, 2=200%, 3=300%, etc.)
 WindowScale = 3
 
+# Display 240 lines instead of 224.(Currently only displays black in the additional lines)
+# This needs to be taken into account when setting AspectRatio.
+# For instance, 256x240 SNES resolution corresponds to: AspectRatio = 16:15
+ExtendedY = 0
+
 # Use an optimized (but potentially more buggy) SNES PPU implementation
 NewRenderer = 1
 
