--- a/sm.ini
+++ b/sm.ini
@@ -69,6 +69,9 @@ AmmoRechargeStation = 0
 # Control the shinespark in any direction
 ShinesparkControl = 0
 
+# Disable health drain while using shinespark
+ShinesparkHealth = 0
+
 # Resume speed boosting from slope
 ChainSpark = 0
 
